--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,13 +1,14 @@
 :root {
     font-family: SF Pro Display;
-    font-size: 120px;
+    font-size: 16px;
+    font-weight: 300;
     
 }
 
 @font-face {
     font-family: 'SF Pro Display';
     font-style: normal;
-    font-weight: 200;
+    font-weight: 300;
     src: local('SF Pro Display Thin'),
     url('./fonts/FontsFree-Net-SFProDisplay-Thin.woff2') format('woff2');
 }
@@ -15,7 +16,7 @@
 @font-face {
     font-family: 'SF Pro Display';
     font-style: normal;
-    font-weight: 300;
+    font-weight: 200;
     src: local('SF Pro Display Medium'),
     url('./fonts/FontsFree-Net-SFProDisplay-Medium-1.woff2') format('woff2');
 }
@@ -31,6 +32,45 @@ p {
 }
 
 body {
- 
+       
+}
+
+ul,
+ol {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: currentColor;
+}
+
+button {
+    cursor: pointer;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.container {
+    padding: 0 20px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .container { 
+        max-width: 768px;
+        padding: 0 32px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+        max-width: 1280px;
+        padding: 0 32px;
+    }
 }
 
