update header and mobile menu

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,15 +3,15 @@
         <h1 class="hero-title">Привіт, я Front-end developer</h1>
         <button class="button-order" type="button">
             <a href="" class="button-order-link"></a>
-            <svg class="btn-order-icon">
-                <use href=""></use>
+            <svg class="btn-order-icon" width="24" height="34">
+                <use href="../img/sprite.svg#icon-arrow"></use>
             </svg>
             Запропонувати вакансію
         </button>
         <button class="button-order" type="button">
             <a href="" class="button-order-link"></a>
             <svg class="btn-order-icon">
-                <use href=""></use>
+                <use href="../img/sprite.svg#icon-arrow"></use>
             </svg>
             Замовити проєкт
         </button>
