--- a/src/css/common.css
+++ b/src/css/common.css
@@ -2,7 +2,17 @@
     font-family: SF Pro Display;
     font-size: 16px;
     font-weight: 300;
-    
+    line-height: 24px;
+    --primary-text-color: #000;
+    --second-text-color: #fff;
+    --primary-bcg-color: #FFFFFF;
+    --primary-icon-color: black;
+    --second-icon-color: #fff;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoonthing: grayscale;
+    -webkit-text-size-adjust: 100%;
 }
 
 @font-face {
@@ -19,6 +29,14 @@
     font-weight: 200;
     src: local('SF Pro Display Medium'),
     url('./fonts/FontsFree-Net-SFProDisplay-Medium-1.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: 'Rafisqi';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Rafisqi Bold'),
+    url('./fonts/Rafisqi\ Bold.woff2') format('woff2');
 }
 
 h1,
