--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,112 @@
 .header {
-  padding: 20px 0;
+  top: 0;
+  position: sticky;
+  background-color: var(--primary-bcg-color);
+  z-index: 9999999;
+  padding-top: 22px;
+  padding-bottom: 22px;
 }
-.nav {
+
+html {
+  scroll-behavior: smooth;
+}
+
+.page-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
-.nav-logo {
-  display: inline-flex;
+
+.navigation {
+  display: flex;
+}
+
+.logotype {
+  font-family: 'Rafisqi', sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+.menu-list {
+  display: none;
+}
+
+
+
+.open-mobile-menu {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  border: none;
+  background-color: transparent;
+}
+
+.burger-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: black;
+}
+
+.mobile-menu {
+  display: flex;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  height: 100%;
+  background-color: var(--primary-bcg-color);
+  position: fixed;
+  z-index: 99999;
+  transition: opacity right 0.3 ease;
+}
+
+.mobile-menu-container {
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+
+.mobile-menu.logotype {
+  margin-right: 10px;
+}
+
+.logo-container {
+  display: flex;
+  gap: 30px;
+}
+
+.cls-btn-menu {
+  top: 21px;
+  right: 20px;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: black;
+  display: flex;
+  line-height: 0;
+  padding: 5px;
+  margin: 0;
   align-items: center;
   justify-content: center;
 }
-.nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+
+.cls-btn-icon {}
+
+.mob-menu-list {}
+
+.mob-menu-item {}
+
+@media screen and (min-width: 768px) {
+  .open-mobile-menu{ 
+    display: none;
+  }
 }
-.nav-link {
-  position: relative;
-  display: block;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
-}
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
-}
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
-}
-.nav-link.active::after {
-  background: #747bff;
+
+@media screen and (min-width: 1280px) {
+  
 }
