--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="page-header">
+    <div class="page-header container">
         <nav class="navigation">
             <a href="../index.html" class="logotype">Skoromnyi</a>
             <ul class="menu-list">
@@ -9,23 +9,27 @@
             </ul>
         </nav>
         <button class="open-mobile-menu">
-            <svg class="burger-icon" width="20" height="15">
+            <svg class="burger-icon" width="30" height="25">
                 <use href="../img/sprite.svg#icon-burger"></use>
             </svg>
         </button>
     </div>
     <!-- MOBILE-MENU -->
-    <div class="mobile-menu">
-        <a href="" class="logotype"></a>
-        <button class="cls-btn-menu">
-            <svg class="cls-btn-icon">
-                <use href=""></use>
-            </svg>
-        </button>
-        <ul class="mob-menu-list">
-            <li class="mob-menu-item"><a href=""></a>Про мене</li>
-            <li class="mob-menu-item"><a href=""></a>Проєкти</li>
-            <li class="mob-menu-item"><a href=""></a>Контакти</li>
-        </ul>
+    <div class="mobile-menu is-open">
+        <div class="mobile-menu-container">
+            <div class="logo-container">
+                <a href="" class="logotype">Skoromnyi</a>
+                <button class="cls-btn-menu">
+                    <svg class="cls-btn-icon" width="15" height="15">
+                        <use href="../img/sprite.svg#icon-close"></use>
+                    </svg>
+                </button>
+            </div>
+            <ul class="mob-menu-list">
+                <li class="mob-menu-item"><a href=""></a>Про мене</li>
+                <li class="mob-menu-item"><a href=""></a>Проєкти</li>
+                <li class="mob-menu-item"><a href=""></a>Контакти</li>
+            </ul>
+        </div>
     </div>
 </header>
