--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,14 +17,12 @@
     <!-- MOBILE-MENU -->
     <div class="mobile-menu is-open">
         <div class="mobile-menu-container">
-            <div class="logo-container">
-                <a href="" class="logotype">Skoromnyi</a>
+                <a href="" class="logotype logo-mob-menu">Skoromnyi</a>
                 <button class="cls-btn-menu">
                     <svg class="cls-btn-icon" width="15" height="15">
                         <use href="../img/sprite.svg#icon-close"></use>
                     </svg>
                 </button>
-            </div>
             <ul class="mob-menu-list">
                 <li class="mob-menu-item"><a href=""></a>Про мене</li>
                 <li class="mob-menu-item"><a href=""></a>Проєкти</li>
