ubdate js code in js file for header and mobile menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,14 +8,14 @@
                 <li class="menu-item">Контакти</li>
             </ul>
         </nav>
-        <button class="open-mobile-menu">
+        <button type="button" class="open-mobile-menu">
             <svg class="burger-icon" width="30" height="25">
                 <use href="../img/sprite.svg#icon-burger"></use>
             </svg>
         </button>
     </div>
     <!-- MOBILE-MENU -->
-    <div class="mobile-menu is-open">
+    <div class="mobile-menu">
         <div class="mobile-menu-container">
                 <a href="" class="logotype logo-mob-menu">Skoromnyi</a>
                 <button class="cls-btn-menu">
