--- a/src/css/common.css
+++ b/src/css/common.css
@@ -78,6 +78,13 @@ img {
     margin: 0 auto;
 }
 
+@media screen and (min-width: 320px) and (max-width: 375px) {
+    .container {
+        min-width: 320px;
+        max-width: 375px;
+    }    
+}
+
 @media screen and (min-width: 768px) {
     .container { 
         max-width: 768px;
