--- a/src/css/header.css
+++ b/src/css/header.css
@@ -30,9 +30,7 @@ html {
   text-transform: uppercase;
 }
 
-.menu-list {
-  display: none;
-}
+
 
 
 
@@ -52,20 +50,19 @@ html {
 }
 
 .mobile-menu {
-  display: flex;
   top: 0;
   right: 0;
-  width: 85%;
+  width: 300px;
   height: 100%;
   background-color: var(--primary-bcg-color);
   position: fixed;
-  z-index: 99999;
+  z-index: 99999999999;
   transform: translateX(100%);
-  transition: transform ease-in-out 0.4 ease;
+  transition: transform 0.4s ease-in-out;
 }
 
 .mobile-menu.is-open {
-  transform: translateX(15%);
+  transform: translateX(0%);
 }
 
 .mobile-menu.is-closed {
@@ -73,9 +70,7 @@ html {
 }
 
 .mobile-menu-container {
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+ padding: 20px;
 }
 
 .logo-mob-menu {
@@ -91,6 +86,7 @@ html {
   width: 25px;
   height: 25px;
   border-radius: 50%;
+  border: none;
   background-color: black;
   display: flex;
   line-height: 0;
@@ -98,17 +94,46 @@ html {
   margin: 0;
   align-items: center;
   justify-content: center;
+  transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cls-btn-icon {}
+.cls-btn-icon {
+   fill: #fff;  
+   transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.cls-btn-menu.cls-btn-icon:hover,
+.cls-btn-menu.cls-btn-icon:focus {
+  fill: #000;
+  background-color: transparent;
+}
+
 
 .mob-menu-list {
+  margin-top: 205px;
+  margin-left: 40px;
   display: flex;
   flex-direction: column;
-  column-gap: 20px;
+  gap: 9px;
 }
 
-.mob-menu-item {}
+.mob-menu-item {
+  font-size: 25px;
+  line-height: 1.5;
+  transition: transform 0.4s ease;
+}
+
+.mob-menu-item:hover,
+.mob-menu-item:focus {
+  transform: scale(1.1);
+}
+
+@media screen and (max-width: 767px) {
+  .menu-list {
+      display: none;
+    }
+}
 
 @media screen and (min-width: 768px) {
   .open-mobile-menu{ 
