--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,19 +1,21 @@
 <section class="hero-section">
-    <div class="container">
-        <h1 class="hero-title">Привіт, я Front-end developer</h1>
-        <button class="button-order" type="button">
-            <a href="" class="button-order-link"></a>
-            <svg class="btn-order-icon" width="24" height="34">
-                <use href="../img/sprite.svg#icon-arrow"></use>
-            </svg>
-            Запропонувати вакансію
-        </button>
-        <button class="button-order" type="button">
-            <a href="" class="button-order-link"></a>
-            <svg class="btn-order-icon">
-                <use href="../img/sprite.svg#icon-arrow"></use>
-            </svg>
-            Замовити проєкт
-        </button>
+    <div class="hero-container container">
+        <h1 class="hero-title">Ласкаво прошу до мого портфоліо!</h1>
+        <div class="hero-btn-container">
+            <button class="button-order" type="button">
+                Запропонувати вакансію
+                <a href="" class="button-order-link"></a>
+                <svg class="btn-order-icon" width="16" height="11">
+                    <use href="../img/sprite.svg#icon-arrow"></use>
+                </svg>
+            </button>
+            <button class="button-order second-button" type="button">
+                Замовити проєкт
+                <a href="" class="button-order-link"></a>
+                <svg class="btn-order-icon" width="16" height="11">
+                    <use href="../img/sprite.svg#icon-arrow"></use>
+                </svg>
+            </button>
+        </div>
     </div>
 </section>
