--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,14 +2,14 @@
     <div class="hero-container container">
         <h1 class="hero-title">Ласкаво прошу до мого портфоліо!</h1>
         <div class="hero-btn-container">
-            <button class="button-order" type="button">
+            <button class="button-order button" type="button">
                 Запропонувати вакансію
                 <a href="" class="button-order-link"></a>
                 <svg class="btn-order-icon" width="16" height="11">
                     <use href="../img/sprite.svg#icon-arrow"></use>
                 </svg>
             </button>
-            <button class="button-order second-button" type="button">
+            <button class="button-order button" type="button">
                 Замовити проєкт
                 <a href="" class="button-order-link"></a>
                 <svg class="btn-order-icon" width="16" height="11">
