--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -10,6 +10,10 @@
 
 .hero-title {
     text-align: center;
+    font-weight: 300;
+    font-size: 40px;
+    line-height: 1.3;
+    color: var(--primary-text-color);
 }
 
 @media screen and (max-width: 767px) {
@@ -28,16 +32,16 @@
 }
 
 .button-order {
-    display: inline-block;
     display: flex;
     width: 127px;
     height: 52px;
     font-family: 'SF Pro Display', sans-serif;
     font-weight: 300;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 1;
     justify-content: center;
     align-items: center;
+    border: 1px solid #ccc;
     border-radius: 260px;
     padding: 21px 25px 19px 25px;
     background-color: transparent;
