--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,6 +19,7 @@ html {
 
 .navigation {
   display: flex;
+  align-items: center;
 }
 
 .logotype {
@@ -129,15 +130,33 @@ html {
   transform: scale(1.1);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .menu-list {
       display: none;
     }
 }
 
 @media screen and (min-width: 768px) {
+
+ .logotype {
+  margin-right: 256px;
+ }
+
   .open-mobile-menu{ 
     display: none;
+  }
+
+  .menu-list {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .menu-item {
+    font-size: 20px;
+    line-height: 1.5;
+    transition: transform 0.4s ease;
   }
 }
 
