--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
         </nav>
         <button type="button" class="open-mobile-menu">
             <svg class="burger-icon" width="30" height="25">
-                <use href="../img/sprite.svg#icon-burger"></use>
+                <use href="../img/icon.svg#icon-burger"></use>
             </svg>
         </button>
     </div>
@@ -20,7 +20,7 @@
                 <a href="" class="logotype logo-mob-menu">Skoromnyi</a>
                 <button class="cls-btn-menu">
                     <svg class="cls-btn-icon" width="13" height="13">
-                        <use href="../img/sprite.svg#icon-close"></use>
+                        <use href="../img/icon.svg#icon-close"></use>
                     </svg>
                 </button>
             <ul class="mob-menu-list">
