--- a/src/css/background-video.css
+++ b/src/css/background-video.css
@@ -38,7 +38,7 @@
     left: 0;
     padding-bottom: 56.25%;
     width: 100%;
-    height: auto;
+    height: 90vh;
     object-fit: cover;
 }
 
@@ -55,22 +55,24 @@
 /* Стилі кнопки */
 .button-order {
     display: flex;
+    margin-bottom: 150px;
     align-items: center;
     justify-content: center;
-    width: 165px;
-    height: 52px;
+    width: 190px;
+    height: 60px;
     font-family: 'SF Pro Display', sans-serif;
     font-weight: 300;
     font-size: 15px;
     border: 1px solid #ccc;
     border-radius: 260px;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.3);
     cursor: pointer;
-    transition: 0.3s;
+    transition: transform 0.3s;
 }
 
-.button-order:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+.button-order:hover,
+.button-order:focus {
+    background-color: var(--primary-text-color);
 }
 
 /* Забираємо підкреслення у тексті кнопки */
