--- a/src/css/header.css
+++ b/src/css/header.css
@@ -23,7 +23,7 @@ html {
 }
 
 .logotype {
-  font-family: 'Rafisqi', sans-serif;
+  font-family: 'Rafisqi-Bold', sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 100%;
