--- a/src/partials/background-video.html
+++ b/src/partials/background-video.html
@@ -11,7 +11,7 @@
                 Запропонувати вакансію
             </a>
             <svg class="btn-order-icon" width="16" height="11">
-                <use href="../img/sprite.svg#icon-arrow"></use>
+                <use href="../img/icon.svg#icon-arrow"></use>
             </svg>
         </button>
     </div>
