--- a/src/css/background-video.css
+++ b/src/css/background-video.css
@@ -36,9 +36,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding-bottom: 56.25%;
     width: 100%;
-    height: 90vh;
+    height: 100%;
     object-fit: cover;
 }
 
