--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,9 +3,9 @@
         <nav class="navigation">
             <a href="../index.html" class="logotype">Skoromnyi</a>
             <ul class="menu-list">
-                <li class="menu-item">Про мене</li>
-                <li class="menu-item">Проєкти</li>
-                <li class="menu-item">Контакти</li>
+                <li class="menu-item"><a href="">Про мене</a></li>
+                <li class="menu-item"><a href="#projects-section">Проєкти</a></li>
+                <li class="menu-item"><a href="">Контакти</a></li>
             </ul>
         </nav>
         <button type="button" class="open-mobile-menu">
@@ -24,9 +24,9 @@
                     </svg>
                 </button>
             <ul class="mob-menu-list">
-                <li class="mob-menu-item"><a href=""></a>Про мене</li>
-                <li class="mob-menu-item"><a href=""></a>Проєкти</li>
-                <li class="mob-menu-item"><a href=""></a>Контакти</li>
+                <li class="mob-menu-item"><a href="">Про мене</a></li>
+                <li class="mob-menu-item"><a href="#projects-section">Проєкти</a></li>
+                <li class="mob-menu-item"><a href="">Контакти</a></li>
             </ul>
         </div>
     </div>
