--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,9 +24,9 @@
                     </svg>
                 </button>
             <ul class="mob-menu-list">
-                <li class="mob-menu-item"><a href=""></a>Про мене</li>
-                <li class="mob-menu-item"><a href=""></a>Проєкти</li>
-                <li class="mob-menu-item"><a href=""></a>Контакти</li>
+                <li class="mob-menu-item"><a href="">Про мене</a></li>
+                <li class="mob-menu-item"><a href="#projects-section">Проєкти</a></li>
+                <li class="mob-menu-item"><a href="">Контакти</a></li>
             </ul>
         </div>
     </div>
