update projects and video

--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -6,7 +6,7 @@
                 <div class="project-object">
                     <h3 class="project-title">Web Studio</h3>
                     <a href="https://antonskoro10.github.io/web-studio/">
-                        <img src="../img/projects/web-studio.jpg" alt="web-studio" class="project-image"
+                        <img src="./img/projects/web-studio.jpg" alt="web-studio" class="project-image"
                             width="270" height="200">
                     </a>
                 </div>
@@ -15,7 +15,7 @@
                 <div class="project-object">
                     <h3 class="project-title">Vyshyvanka Vibes</h3>
                     <a href="https://oleksiybodnia.github.io/Unbreakable/">
-                        <img src="../img/projects/vyshyvanka-vibes.jpg" alt="vyshyvanka-vibes"
+                        <img src="./img/projects/vyshyvanka-vibes.jpg" alt="vyshyvanka-vibes"
                             class="project-image" width="270" height="200">
                     </a>
                 </div>
@@ -24,7 +24,7 @@
                 <div class="project-object">
                     <h3 class="project-title">CV Lloyd Jefferson</h3>
                     <a href="https://antonskoro10.github.io/CV-L.Jefferson/">
-                        <img src="../img/projects/cv-lloyd-jefferson.jpg" alt="cv-lloyd-jefferson"
+                        <img src="./img/projects/cv-lloyd-jefferson.jpg" alt="cv-lloyd-jefferson"
                             class="project-image" width="270" height="200">
                     </a>
                 </div>
