--- a/src/partials/background-video.html
+++ b/src/partials/background-video.html
@@ -1,8 +1,8 @@
 <section class="video-section">
     <div class="video-container container">
         <video class="background-video" autoplay loop muted playsinline>
-            <source src="../img/background-video/background-video.mp4" type="video/mp4">
-            <source src="../img/background-video/background-video.webm" type="video/webm">
+            <source src="./img/background-video/background-video.mp4" type="video/mp4">
+            <source src="./img/background-video/background-video.webm" type="video/webm">
         </video>
     </div>
     <div class="content">
@@ -10,9 +10,6 @@
             <a href="#" class="button-order-link">
                 Запропонувати вакансію
             </a>
-            <svg class="btn-order-icon" width="16" height="11">
-                <use href="../img/icon.svg#icon-arrow"></use>
-            </svg>
         </button>
     </div>
 </section>
