--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,7 +24,7 @@
                     </svg>
                 </button>
             <ul class="mob-menu-list">
-                <li class="mob-menu-item"><a href="">Про мене</a></li>
+                <li class="mob-menu-item"><a href="#about-me">Про мене</a></li>
                 <li class="mob-menu-item"><a href="#projects-section">Проєкти</a></li>
                 <li class="mob-menu-item"><a href="">Контакти</a></li>
             </ul>
