--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -1,4 +1,4 @@
-<section class="about-me">
+<section class="about-me" id="about-me">
     <div class="about-me-container container">
         <h2 class="about-me-title">Про мене</h2>
         <img src="./img/my-photo/my-photo.png" 
